Mine generation & material selection